--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
     }
-  }
+  },
+  "include": [
+    "**/*.js",
+  ],
+  "exclude": ["node_modules"]
 }
